[nosetests]
match = ^test
nocapture = 1

[metadata]
description-file = README.rst

[compile_catalog]
directory = doi_request/locale
domain = doi_request
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = doi_request/locale/doi_request.pot
width = 80

[init_catalog]
domain = doi_request
input_file = doi_request/locale/doi_request.pot
output_dir = doi_request/locale

[update_catalog]
domain = doi_request
input_file = doi_request/locale/doi_request.pot
output_dir = doi_request/locale
previous = true